Add TLB, use local (rather than dynamic) objects in PageTable

--- a/VirtMem/VirtMem/VirtMem.vcxproj
+++ b/VirtMem/VirtMem/VirtMem.vcxproj
@@ -149,11 +149,13 @@
     <ClCompile Include="BackingStore.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="PageTable.cpp" />
+    <ClCompile Include="TLB.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BackingStore.h" />
     <ClInclude Include="memory.h" />
     <ClInclude Include="PageTable.h" />
+    <ClInclude Include="TLB.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
