--- a/VirtMem/VirtMem/VirtMem.vcxproj.filters
+++ b/VirtMem/VirtMem/VirtMem.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="PageTable.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="TLB.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BackingStore.h">
@@ -33,6 +36,9 @@
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="PageTable.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="TLB.h">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
